# findear

./: README.md  package-lock.json
.gitlab/merge_request_templates/: default.md
Study/: jiinsung.md  kangyigyu.md  kingdonggun.md  sanghak.md  smy.md  sonyeonghun.md
batch/: .gitignore  build.gradle
config/: build.gradle
exec/: Dump20240403.sql  포팅 매뉴얼.md
front/: .env  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
front/public/: ServiceWorker.js  ServiceWorker.ts  firebase-messaging-sw.js  manifest.json
front/src/: App.tsx  Firebase.ts  SW.ts  ServiceWorker.ts  index.tsx  vite-env.d.ts
front/src/app/: App.tsx  index.css
front/src/entities/: index.tsx
front/src/pages/: index.tsx
front/src/shared/: index.tsx
front/src/widgets/: index.tsx
infra/: README.md
infra/findear-infra-setting/: .env  .gitignore  README.md  compose.yml  dev-deploy.sh  prev_conf.sh  re-execute.sh  test-execute.sh
infra/findear-infra-setting/batch/: Dockerfile  application.yml  output.cert
infra/findear-infra-setting/config/: Dockerfile  application.yml
infra/findear-infra-setting/deploy-practice/: deploy.sh
infra/git-settings/: commit-msg  prepare-commit-msg  settings.sh
main/: .gitignore  build.gradle
match/: .gitignore  db.sqlite3  manage.py  pyproject.toml  selenium-test.ipynb  test-selenium.py
match/findear/: asgi.py  settings.py  urls.py  wsgi.py
match/lostMatching/: apps.py  lost112-matching.ipynb  matching.py  models.py  police_portal_list.csv  test.ipynb  test_police_location.csv  urls.py  views.py
(+367 files in other folders)
